// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[en] save-to-disk-modal archive - FAIL - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Unable to save file to Yandex Disk.
Please try again later.
  </span>
</div>
`;

exports[`[en] save-to-disk-modal archive - FAIL 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Unable to save file to Yandex Disk.
Please try again later.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[en] save-to-disk-modal archive - OUT_OF_SPACE - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Insufficient free space.
Unable to upload file.
  </span>
</div>
`;

exports[`[en] save-to-disk-modal archive - OUT_OF_SPACE 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Insufficient free space.
Unable to upload file.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[en] save-to-disk-modal archive - READY - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Saved to your Yandex Disk
  </span>
  <lego-components_link
    classname="action"
    href="some/folder/url/for/archive"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
    theme="normal"
  >
    <span>
      Open
    </span>
  </lego-components_link>
</div>
`;

exports[`[en] save-to-disk-modal archive - READY 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
          File saved-file-from-archive.ext saved to the 
          <lego-components_link
            data-ref="link"
            href="some/folder/url/for/archive"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
            theme="normal"
          >
            Downloads
          </lego-components_link>
           folder on your Yandex Disk.
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[en] save-to-disk-modal edit - READY - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Saved to your Yandex Disk
  </span>
  <lego-components_link
    classname="action"
    href="folder/url/for/editing"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'edit')"
    theme="normal"
  >
    <span>
      Open
    </span>
  </lego-components_link>
</div>
`;

exports[`[en] save-to-disk-modal edit - READY 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
          File  saved to the 
          <lego-components_link
            data-ref="link"
            href="folder/url/for/editing"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'edit')"
            theme="normal"
          >
            Downloads
          </lego-components_link>
           folder on your Yandex Disk.
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[en] save-to-disk-modal save - FAIL - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Unable to save file to Yandex Disk.
Please try again later.
  </span>
</div>
`;

exports[`[en] save-to-disk-modal save - FAIL 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Unable to save file to Yandex Disk.
Please try again later.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[en] save-to-disk-modal save - OUT_OF_SPACE - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Insufficient free space.
Unable to upload file.
  </span>
</div>
`;

exports[`[en] save-to-disk-modal save - OUT_OF_SPACE 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Insufficient free space.
Unable to upload file.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[en] save-to-disk-modal save - READY - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Saved to your Yandex Disk
  </span>
  <lego-components_link
    classname="action"
    href="some/folder/url"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
    theme="normal"
  >
    <span>
      Open
    </span>
  </lego-components_link>
</div>
`;

exports[`[en] save-to-disk-modal save - READY 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
          File  saved to the 
          <lego-components_link
            data-ref="link"
            href="some/folder/url"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
            theme="normal"
          >
            Downloads
          </lego-components_link>
           folder on your Yandex Disk.
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[ru] save-to-disk-modal archive - FAIL - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Не удалось сохранить файл на Диск.
Повторите попытку позже.
  </span>
</div>
`;

exports[`[ru] save-to-disk-modal archive - FAIL 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Не удалось сохранить файл на Диск.
Повторите попытку позже.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[ru] save-to-disk-modal archive - OUT_OF_SPACE - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Не удалось сохранить файл на Диск.
Недостаточно свободного места.
  </span>
</div>
`;

exports[`[ru] save-to-disk-modal archive - OUT_OF_SPACE 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Не удалось сохранить файл на Диск.
Недостаточно свободного места.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[ru] save-to-disk-modal archive - READY - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Сохранено на ваш Яндекс Диск
  </span>
  <lego-components_link
    classname="action"
    href="some/folder/url/for/archive"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
    theme="normal"
  >
    <span>
      Открыть
    </span>
  </lego-components_link>
</div>
`;

exports[`[ru] save-to-disk-modal archive - READY 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
          Файл saved-file-from-archive.ext сохранен на ваш Яндекс Диск
в папку 
          <lego-components_link
            data-ref="link"
            href="some/folder/url/for/archive"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
            theme="normal"
          >
            Загрузки
          </lego-components_link>
          .
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[ru] save-to-disk-modal edit - READY - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Сохранено на ваш Яндекс Диск
  </span>
  <lego-components_link
    classname="action"
    href="folder/url/for/editing"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'edit')"
    theme="normal"
  >
    <span>
      Открыть
    </span>
  </lego-components_link>
</div>
`;

exports[`[ru] save-to-disk-modal edit - READY 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
          Файл  сохранен на ваш Яндекс Диск
в папку 
          <lego-components_link
            data-ref="link"
            href="folder/url/for/editing"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'edit')"
            theme="normal"
          >
            Загрузки
          </lego-components_link>
          .
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[ru] save-to-disk-modal save - FAIL - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Не удалось сохранить файл на Диск.
Повторите попытку позже.
  </span>
</div>
`;

exports[`[ru] save-to-disk-modal save - FAIL 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Не удалось сохранить файл на Диск.
Повторите попытку позже.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[ru] save-to-disk-modal save - OUT_OF_SPACE - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Не удалось сохранить файл на Диск.
Недостаточно свободного места.
  </span>
</div>
`;

exports[`[ru] save-to-disk-modal save - OUT_OF_SPACE 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Не удалось сохранить файл на Диск.
Недостаточно свободного места.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[ru] save-to-disk-modal save - READY - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Сохранено на ваш Яндекс Диск
  </span>
  <lego-components_link
    classname="action"
    href="some/folder/url"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
    theme="normal"
  >
    <span>
      Открыть
    </span>
  </lego-components_link>
</div>
`;

exports[`[ru] save-to-disk-modal save - READY 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
          Файл  сохранен на ваш Яндекс Диск
в папку 
          <lego-components_link
            data-ref="link"
            href="some/folder/url"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
            theme="normal"
          >
            Загрузки
          </lego-components_link>
          .
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[tr] save-to-disk-modal archive - FAIL - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Dosya Disk'e kaydedilemedi.
Daha sonra tekrar deneyin.
  </span>
</div>
`;

exports[`[tr] save-to-disk-modal archive - FAIL 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Dosya Disk'e kaydedilemedi.
Daha sonra tekrar deneyin.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[tr] save-to-disk-modal archive - OUT_OF_SPACE - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Dosya Disk'e kaydedilemedi.
Yeterince boş alan yok.
  </span>
</div>
`;

exports[`[tr] save-to-disk-modal archive - OUT_OF_SPACE 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Dosya Disk'e kaydedilemedi.
Yeterince boş alan yok.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[tr] save-to-disk-modal archive - READY - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Yandex Disk'e kaydedildi
  </span>
  <lego-components_link
    classname="action"
    href="some/folder/url/for/archive"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
    theme="normal"
  >
    <span>
      Aç
    </span>
  </lego-components_link>
</div>
`;

exports[`[tr] save-to-disk-modal archive - READY 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
          saved-file-from-archive.ext adlı dosya Yandex Disk'inizdeki

          <lego-components_link
            data-ref="link"
            href="some/folder/url/for/archive"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
            theme="normal"
          >
            İndirilenler
          </lego-components_link>
           klasörüne kaydedildi.
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[tr] save-to-disk-modal edit - READY - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Yandex Disk'e kaydedildi
  </span>
  <lego-components_link
    classname="action"
    href="folder/url/for/editing"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'edit')"
    theme="normal"
  >
    <span>
      Aç
    </span>
  </lego-components_link>
</div>
`;

exports[`[tr] save-to-disk-modal edit - READY 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
           adlı dosya Yandex Disk'inizdeki

          <lego-components_link
            data-ref="link"
            href="folder/url/for/editing"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'edit')"
            theme="normal"
          >
            İndirilenler
          </lego-components_link>
           klasörüne kaydedildi.
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[tr] save-to-disk-modal save - FAIL - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Dosya Disk'e kaydedilemedi.
Daha sonra tekrar deneyin.
  </span>
</div>
`;

exports[`[tr] save-to-disk-modal save - FAIL 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Dosya Disk'e kaydedilemedi.
Daha sonra tekrar deneyin.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[tr] save-to-disk-modal save - OUT_OF_SPACE - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Dosya Disk'e kaydedilemedi.
Yeterince boş alan yok.
  </span>
</div>
`;

exports[`[tr] save-to-disk-modal save - OUT_OF_SPACE 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Dosya Disk'e kaydedilemedi.
Yeterince boş alan yok.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[tr] save-to-disk-modal save - READY - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Yandex Disk'e kaydedildi
  </span>
  <lego-components_link
    classname="action"
    href="some/folder/url"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
    theme="normal"
  >
    <span>
      Aç
    </span>
  </lego-components_link>
</div>
`;

exports[`[tr] save-to-disk-modal save - READY 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
           adlı dosya Yandex Disk'inizdeki

          <lego-components_link
            data-ref="link"
            href="some/folder/url"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
            theme="normal"
          >
            İndirilenler
          </lego-components_link>
           klasörüne kaydedildi.
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[uk] save-to-disk-modal archive - FAIL - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Не вдалося зберегти файл на Диск.
Повторіть спробу пізніше.
  </span>
</div>
`;

exports[`[uk] save-to-disk-modal archive - FAIL 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Не вдалося зберегти файл на Диск.
Повторіть спробу пізніше.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[uk] save-to-disk-modal archive - OUT_OF_SPACE - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Не вдалося зберегти файл на Диск.
Недостатньо вільного місця.
  </span>
</div>
`;

exports[`[uk] save-to-disk-modal archive - OUT_OF_SPACE 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Не вдалося зберегти файл на Диск.
Недостатньо вільного місця.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[uk] save-to-disk-modal archive - READY - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Збережено на ваш Яндекс Диск
  </span>
  <lego-components_link
    classname="action"
    href="some/folder/url/for/archive"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
    theme="normal"
  >
    <span>
      Відкрити
    </span>
  </lego-components_link>
</div>
`;

exports[`[uk] save-to-disk-modal archive - READY 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
          Файл saved-file-from-archive.ext збережено на ваш Яндекс Диск
у папку 
          <lego-components_link
            data-ref="link"
            href="some/folder/url/for/archive"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
            theme="normal"
          >
            Завантаження
          </lego-components_link>
          .
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[uk] save-to-disk-modal edit - READY - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Збережено на ваш Яндекс Диск
  </span>
  <lego-components_link
    classname="action"
    href="folder/url/for/editing"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'edit')"
    theme="normal"
  >
    <span>
      Відкрити
    </span>
  </lego-components_link>
</div>
`;

exports[`[uk] save-to-disk-modal edit - READY 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
          Файл  збережено на ваш Яндекс Диск
у папку 
          <lego-components_link
            data-ref="link"
            href="folder/url/for/editing"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'edit')"
            theme="normal"
          >
            Завантаження
          </lego-components_link>
          .
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[uk] save-to-disk-modal save - FAIL - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Не вдалося зберегти файл на Диск.
Повторіть спробу пізніше.
  </span>
</div>
`;

exports[`[uk] save-to-disk-modal save - FAIL 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Не вдалося зберегти файл на Диск.
Повторіть спробу пізніше.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[uk] save-to-disk-modal save - OUT_OF_SPACE - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Не вдалося зберегти файл на Диск.
Недостатньо вільного місця.
  </span>
</div>
`;

exports[`[uk] save-to-disk-modal save - OUT_OF_SPACE 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Не вдалося зберегти файл на Диск.
Недостатньо вільного місця.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`[uk] save-to-disk-modal save - READY - mobile 1`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Збережено на ваш Яндекс Диск
  </span>
  <lego-components_link
    classname="action"
    href="some/folder/url"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
    theme="normal"
  >
    <span>
      Відкрити
    </span>
  </lego-components_link>
</div>
`;

exports[`[uk] save-to-disk-modal save - READY 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
          Файл  збережено на ваш Яндекс Диск
у папку 
          <lego-components_link
            data-ref="link"
            href="some/folder/url"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
            theme="normal"
          >
            Завантаження
          </lego-components_link>
          .
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;
